# flamingo-downloader

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  README_zh.md  TODO.md
.cargo/: config.toml
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  dependabot.yml
.github/actions/setup-linux-build-deps/: action.yml
.github/workflows/: build-release.yml  dependabot-auto-merge.yml
aria2/conf/: aria2.conf
browser-extension/: README.md  background.js  i18n.js  manifest.firefox.json  manifest.json  options.html  options.js  popup.html  popup.js
browser-extension/native-host/: README.md  com.lc5900.flamingo.bridge.chrome.json.template  com.lc5900.flamingo.bridge.firefox.json.template  flamingo_native_host.py  install-host-linux.sh  install-host-macos.sh  install-host-windows.ps1
docs/: browser-extension-checklist.md  download-sample-set.md  local-api.md  privacy-notes.md  remote-dashboard-feasibility.md  roadmap-acceptance.md
scripts/: flamingo-cli.ps1  preflight.ps1  preflight.sh  tauri-before-build.mjs
scripts/ci/: prepare_aria2_unix.sh  prepare_aria2_windows.ps1
src/: aria2_manager.rs  browser_bridge.rs  commands.rs  db.rs  download_service.rs  error.rs  events.rs  lib.rs  link_parser.rs  main.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.txt
src-tauri/src/: main.rs
ui/: README.md  index.html  logs.html  package-lock.json  package.json  vite.config.ts
ui/scripts/: bench-task-list.mjs  check-bundle-size.mjs  check-i18n.mjs  check-node-version.mjs  gen-i18n-keys.mjs
ui/src/: App.css  App.tsx  index.css  logs.css  logs.tsx  main.tsx  types.ts
ui/src/api/: client.ts
ui/src/components/: ResizableTitle.tsx
ui/src/hooks/: useTableLayout.test.ts  useTableLayout.ts
ui/src/i18n/: en-US.json  index.ts  keys.ts  zh-CN.json
ui/src/pages/: AddDownloadPage.tsx  DownloadedPage.tsx  DownloadingPage.tsx  MediaDiscoveryPage.tsx  RulesPage.tsx  SettingsPage.tsx  TaskDetailPage.tsx
ui/src/stores/: uiViewStore.ts
ui/src/types/: shortcuts.ts
(+19 files in other folders)
