[package]
name = "flamingo_downloader_tauri"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
flamingo_downloader = { path = ".." }
